--- a/android/local.properties
+++ b/android/local.properties
@@ -1,2 +1,2 @@
-sdk.dir=C:\\Users\\rafit\\AppData\\Local\\Android\\sdk
-flutter.sdk=C:\\src\\flutter
+sdk.dir=/Users/rafitohumam/Library/Android/sdk
+flutter.sdk=/opt/homebrew/Caskroom/flutter/3.3.7/flutter
